# youbot-project

./: CMakeLists.txt  package.xml  package.xml~
msg/: Num.msg  Num.msg~
scripts/: object_movement.py  object_movement.py~
src/: youbot_ros_hello_world.cpp  youbot_ros_hello_world.cpp~
